@@ -1,3 +1,8 @@
+2016-12-01  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR rtl-optimization/78607
+	* combine.c (try_combine): Emit a barrier after a unconditional trap.
+
 2016-11-30  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/78602
